<resources>
    <string name="app_name">MEGA Inventory</string>
    <string name="importChoice">აირჩიეთ სასურველი ფაილი</string>
    <string name="incorrectFileImport">აირჩიეთ სწორი ფაილი</string>
    <string name="select_one_product">აირჩიეთ ერთი პროდუქტი</string>
    <string name="your_input_product_not_found">თქვენი შეყვანილი პროდუქტი ვერ მოიძებნა!</string>
    <string name="input_product_incorrect_price">სტიკერზე მოცემული ფასი არასწორია!</string>
    <string name="ok">OK</string>
    <string name="bt_state_connected">ბლუთუზი დაკავშირდა</string>
    <string name="bt_state_connecting">ბლუთუზი კავშირდება...</string>
    <string name="bt_state_fail">ბლუთუზის კავშირი შეწყდა</string>
    <string name="ftp_already_started">FTP სერვერი უკვე ჩართულია</string>
    <string name="device_bluetooth_unsupported">მოწყობილობას არ აქვს ბლუთუზის მხარდაჭერა</string>
    <string name="select_bluetooth_device">აიღციეთ ბლუთუზ მოწყობილობა</string>
    <string name="select_bluetooth_connecting">დაკავშირება...</string>
    <string name="cancel">გაუქმება</string>
    <string name="camera_flash_volup_prompt">განათებისთვის გამოიყენეთ ხმის აწევის ღილაკი</string>
    <string name="big_database_long_load_time">დიდი ბაზების შემთხვევაში ამ მოქმედებას შესაძლოა დიდი დრო დასჭირდეს!</string>
    <string name="csvexport_yourlastfile">\"თქვენი საბოლოო ფაილი \"</string>
    <string name="csvexport_withname">სახელით\n</string>
    <string name="csvexport_checkNameInDownloads">\nშეამოწმეთ Downloads დირექტორიაში</string>
    <string name="show">მაჩვენე</string>
    <string name="dialogReturn">დაბრუნება</string>
    <string name="error_product_not_found">შეცდომა! პროდუქტი ვერ მოიძებნა</string>
    <string name="csvimport_load_products">პროდუქტების ჩატვირთვა</string>
    <string name="csvimport_big_import_wait">დიდი ფაილის იმპორტს შესაძლოა დასჭირდეს რამდენიმე წამი, გთხოვთ დაელოდოთ და არ გამორთოთ აპლიკაცია</string>
    <string name="log_file_restore_data">Log ფაილიდან აღდგენა</string>
    <string name="update_db_success">წარმატებით განახლდა ბაზა</string>
    <string name="only_csv_files_allowed">მხოლოდ CSV ფაილებია ნებადართული</string>
    <string name="data_imported">ინფორმაცია ჩაიტვირთა</string>
    <string name="allow_save_permission">მიანიჭეთ შენახვის უფლება!</string>
    <string name="log_upload_success">წამატებით აიტვირთა Log</string>
    <string name="header_anagceri">ანაღწერი</string>
    <string name="header_diff">სხვაობა</string>
    <string name="header_count">რაოდ.</string>
    <string name="header_group">ჯგუფი</string>
    <string name="header_price">ფასი</string>
    <string name="header_price_price">თვითღ.</string>
    <string name="header_name">დასახელება</string>
    <string name="header_barcode">შტრიხკოდი</string>
    <string name="header_code">კოდი</string>
    <string name="minus_one">-1</string>
    <string name="plus_one">+1</string>
    <string name="download">ჩამოწერა</string>
    <string name="bar_code">ბარ კოდი</string>
    <string name="code">კოდი</string>
    <string name="overhead">ზედნადები</string>
    <string name="order_number">შეკვეთის ნომერი</string>
    <string name="receive">მიღება</string>
    <string name="print">ბეჭდვა</string>
    <string name="Inventory">აღწერა</string>
    <string name="return_back">უკან დაბრუნება</string>
    <string name="start">დაწყება</string>
    <string name="connect">დაკავშირება</string>
    <string name="search">ძებნა</string>
    <string name="parameters">პარამეტრები</string>
</resources>