<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardCornerRadius="7dp"
    android:layout_margin="1dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:textStyle="bold"
                android:layout_marginRight="3dp"
                android:text="ID: "
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductpid"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="2208092"
                android:gravity="left"/>
            <TextView
                android:layout_width="wrap_content"
                android:paddingLeft="20dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text=">"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductname"
                android:layout_width="275dp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="ხილი/ ბანანი მეორე ხარისხის/ წონის"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="@string/header_code"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2208092"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="@string/header_barcode"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductbarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2621839000009"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="@string/header_price_price"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductprimeprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tvitgirebuleba"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="@string/header_price"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.50"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="@string/header_group"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.50"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="@string/header_count"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="@string/header_anagceri"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductanagweri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.50"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="3dp"
                android:text="@string/header_diff"
                android:gravity="left"/>
            <TextView
                android:id="@+id/txtproductdifference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:gravity="left"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>