<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/root_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/go_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_background"
                android:drawableStart="@drawable/baseline_arrow_back_24" />

            <Button
                android:id="@+id/download_button_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawableStart="@drawable/baseline_file_download_24"
                android:text="@string/download" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/bar_code"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:hint="@string/bar_code"
                android:background="@drawable/bar_code_edittext"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circular_button"
                android:padding="3dp"
                android:text="@string/minus_one"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/count_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circular_button"
                android:padding="3dp"
                android:text="@string/plus_one"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <ImageButton
                android:id="@+id/accept_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_check_60"
                android:scaleType="center"
                android:background="@drawable/rounded_button_for_accept"
                />

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">
            <ImageButton
                android:id="@+id/list_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:padding="15dp"
                android:src="@drawable/baseline_playlist_add_check_50"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#B6F9D1D1"
                />
            <TextView
                android:id="@+id/saved_product_list_count"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/list_button"
                android:layout_alignEnd="@id/list_button"
                android:text="0"
                android:gravity="center"
                android:textColor="#FFF"
                android:textSize="12sp"
                android:background="@drawable/badge_circle"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/webview_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>